scrollbar fixes

--- a/dashboard/public/styles/displayLogs.css
+++ b/dashboard/public/styles/displayLogs.css
@@ -29,7 +29,7 @@
 	z-index: 0;
 }
 #logs{
-	width:100%;
+	width: calc(100vw - 17px);
 	z-index: 100;
 }
 #logs_header{
